Create sync button
